<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.addfolder.AddFolderFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:title="Add folder"
            app:titleTextAppearance="@style/ToolbarStyle"
            app:titleTextColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:hint="Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailToolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="Password (optional)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>