...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:spanCount="2"
            tools:listitem="@layout/folders_list_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_round_add_24"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
...
